[misc] CSS fixes/cleanup
- Fix placeholder and plain text alignment to match EuiFieldText by adding a class and extra padding-left

- Remove unnecessary `hover` pseudo around cursor (by default they only show on hover) and fix pills to also use the correct cursor when disabled

--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -45,14 +45,16 @@
       height: auto;  /* 3 */
       flex-wrap: wrap; /* 1 */
       align-content: flex-start;
-
-      &:hover {
-        cursor: text;
-      }
+      cursor: text;
     }
 
     &.euiComboBox__inputWrap--noWrap {
       align-items: center;
+    }
+
+    // Match placeholder and plain text position to EuiFieldText
+    &.euiComboBox__inputWrap--plainText {
+      padding-inline-start: $euiSizeS;
     }
 
     .euiComboBoxPlainTextSelection {
@@ -126,7 +128,8 @@
     }
 
     // overrides the `cursor: text;` that displays on hover for combo boxes that allow multiple pills
-    .euiComboBox__inputWrap:not(.euiComboBox__inputWrap--noWrap):hover {
+    .euiComboBox__inputWrap,
+    .euiComboBoxPill {
       cursor: not-allowed;
     }
   }
@@ -134,8 +137,11 @@
   &.euiComboBox--compressed {
     .euiComboBox__inputWrap {
       line-height: $euiFormControlCompressedHeight; /* 2 */
-      padding-top: 0;
-      padding-bottom: 0;
+      padding-block: 0;
+
+      &--plainText {
+        padding-inline-start: $euiSizeXS;
+      }
     }
   }
 }
